<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    tools:context=".flat">

    <TextView
        android:id="@+id/t_flat"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tflat"
        android:textColor="@color/dark"
        android:textSize="60sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bflat_b1"
        class="androidx.appcompat.widget.AppCompatButton"
        android:layout_width="108dp"
        android:layout_height="128dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="56dp"
        android:background="@color/or"
        android:text="@string/f1"
        android:textColor="@color/dark"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/t_flat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bflat_b2"
        android:layout_width="108dp"
        android:layout_height="128dp"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="56dp"
        android:text="@string/f2"
        android:textColor="@color/dark"
        android:textSize="40sp"
        android:background="@color/or"
        app:layout_constraintBaseline_toBaselineOf="@id/bflat_b1"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintLeft_toRightOf="@id/bflat_b1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/t_flat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bflat_b3"
        android:layout_width="108dp"
        android:layout_height="128dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="68dp"
        android:text="@string/f3"
        android:textColor="@color/dark"
        android:textSize="40sp"
        android:background="@color/or"
        app:layout_constraintBottom_toTopOf="@id/flat_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bflat_b1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bflat_b4"
        android:layout_width="108dp"
        android:layout_height="128dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="68dp"
        android:text="@string/f4"
        android:textColor="@color/dark"
        android:textSize="40sp"
        android:background="@color/or"
        app:layout_constraintBaseline_toBaselineOf="@id/bflat_b3"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintLeft_toRightOf="@id/bflat_b3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bflat_b2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/flat_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="76dp"
        android:background="@color/or"
        android:text="@string/Back"
        android:textColor="@color/dark"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bflat_b3" />

</androidx.constraintlayout.widget.ConstraintLayout>